# dna

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  setup.sh
dnac/: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  genesis_template.conf
dnac/deploy/: dnac-witness.service
dnac/docs/: CLI_COMMANDS.md  COMPREHENSIVE_AUDIT.md  DNA_LIBS_INTEGRATION.md  ROADMAP.md  STATUS.md  TESTING.md  TODO.md  WITNESS_NODES.md  dna_functions
dnac/plans/: BFT_PLAN.md
dnac/problems/: multi-input-double-spend.md  utxo-persistence.md
dnac/src/: version.c
dnac/tests/: merkle_vector.inc  test_anchor_verify.c  test_anchored_proofs.c  test_block_hash_timestamp_excluded.c  test_chain_config_serialize.c  test_chain_config_verify.c  test_chain_def_codec.c  test_chain_def_initial_validators.c  test_chain_id.c  test_claim_builder.c  test_claim_reward_serialize.c  test_claim_reward_verify.c  test_cross_chain_replay.c  test_delegate_builder.c  test_delegate_serialize.c  test_delegate_verify.c  test_deserialize_dispatch.c  test_gaps.c  test_genesis_prepare.c  test_genesis_verify.c  test_genesis_verify_rule_p.c  test_genesis_verify_rule_p_extended.c  test_merkle_verify.c  test_multi_asset.c  test_preimage_binding.c  test_purpose_tag_reuse.c  test_real.c  test_remote.c  test_rewards_query_stub.c  test_shielded_wire.c  test_signer_canonical.c  test_stake_builder.c  test_stake_constants.c  test_stake_serialize.c  test_stake_verify.c  test_tx_types.c  test_undelegate_serialize.c  test_undelegate_verify.c  test_unstake_serialize.c  test_unstake_verify.c  (+6 more)
dnac/tools/: check_witness_announce.c  gen_genesis.c  install.sh  pack_chain_def.c
explorer/: CMakeLists.txt  README.md
explorer/deploy/: dna-explorerd.service  scan.cpunk.io.nginx.conf
explorer/src/: exp_chain.c  exp_chain.h  exp_db.c  exp_db.h  exp_extract.c  exp_extract.h  exp_http.c  exp_http.h  exp_json.c  exp_json.h  exp_sync.c  exp_sync.h  main.c
explorer/tests/: test_explorer.c
messenger/: .gitignore  .gitlab-ci.yml  .security_audit_plan.md  BUGS.md  CLAUDE.md  CMakeLists.txt  MISSING_FEATURES.md  README.md  ROADMAP.md  build-android.sh  build-cross-compile.sh  build-gui.sh  dna_api.c  dna_api.h  dna_config.c  dna_config.h  install.sh  message_backup.c  message_backup.h  messenger.c  messenger.h  messenger_groups.c  messenger_transport.c  messenger_transport.h  push_both.sh  setup-windows-build.sh
messenger/archive/: README.md
messenger/blockchain/: blockchain.h  blockchain_registry.c  blockchain_wallet.c  blockchain_wallet.h
messenger/cli/: CMakeLists.txt  cli_commands.c  cli_commands.h  cli_dna_chain.c  cli_dna_chain_helpers.h  cli_dna_chain_impl.c  main.c
messenger/cmake/: AndroidBuild.cmake  Dependencies.cmake  LinuxBuild.cmake  PlatformDetect.cmake  Version.cmake  WindowsBuild.cmake
messenger/database/: addressbook_db.c  addressbook_db.h  cache_manager.c  cache_manager.h  channel_cache.c  channel_cache.h  channel_subscriptions_db.c  channel_subscriptions_db.h  contacts_db.c  contacts_db.h  db_encryption.c  db_encryption.h  feed_cache.c  feed_cache.h  following_db.c  following_db.h  group_invitations.c  group_invitations.h  presence_cache.c  presence_cache.h  profile_cache.c  profile_cache.h  profile_manager.c  profile_manager.h  wall_cache.c  wall_cache.h  wallet_cache.c  wallet_cache.h
messenger/dht/: CMakeLists.txt  gnutls_win_shim.c
messenger/dna_messenger_flutter/: LICENSE  README.md  ffigen.yaml  pubspec.yaml  run_linux.sh
messenger/docs/: ARCHITECTURE_DETAILED.md  BETA_READINESS_REPORT.md  BLOCKCHAIN_INTEGRATION.md  CLI_TESTING.md  CODE_CLEANUP_REQUIRED.md  COMPREHENSIVE_AUDIT.md  CONCURRENCY.md  DHT_STORAGE_MODEL.md  DHT_SYSTEM.md  DNA_ENGINE_API.md  DNA_NODUS.md  DNA_PLUS.md  FLUTTER_UI.md  FUZZING.md  GEK_ROTATION_DESIGN.md  GIT_WORKFLOW.md  IDENTITY_SYSTEM_REPORT.md  MESSAGE_SYSTEM.md  MOBILE_PORTING.md  P2P_ARCHITECTURE.md  PRIVACY_DHT_KEY_DERIVATION.md  PROTOCOL.md  QR_AUTH.md  QR_AUTH_V4.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2026_02_23.md
messenger/jni/: CMakeLists.txt  dna_jni.c
messenger/messenger/: contacts.c  contacts.h  gek.c  gek.h  group_database.c  group_database.h  groups.c  groups.h  identity.c  identity.h  init.c  init.h  keygen.c  keygen.h  keys.c  keys.h  messages.c  messages.h  messenger_core.h  status.c  status.h
messenger/scripts/: audit_dht_keys.sh  build-android-docker.sh  deploy-artifacts.sh  installer.iss
messenger/tasks/: dead-code-audit.md  lessons.md
messenger/tests/: CMakeLists.txt  test_aes256_gcm.c  test_bip39_bip32.c  test_call_crypto.c  test_call_driver.c  test_call_fsm.c  test_call_orch.c  test_call_parse.c  test_call_sign.c  test_call_signal.c  test_cli_send_bench.c  test_concurrency_task_queue_contract.c  test_contact_request_validation.c  test_db_encryption.c  test_debug_log_wire.c  test_dht_listen.c  test_dilithium5_signature.c  test_dm_outbox_requires_salt.c  test_dna_profile.c  test_dual_clients.sh  test_engine_destroy_during_backup.c  test_fp_converter.c  test_gek_concurrent.c  test_gek_ratchet.c  test_group_channel.c  test_group_database_migration_v3.c  test_group_outbox_make_key_salted.c  test_key_encryption.c  test_kyber1024.c  test_lookup.c  test_nodus_init_concurrent.c  test_platform_keystore.c  test_pq_encrypted_put.c  test_pq_node_identity.c  test_qgp_key_size_validation.c  test_reactions.c  test_register_name_failure_preserves_keys.c  test_register_name_idempotent.c  test_registered_name_validation.c  test_salt_agreement.c  (+5 more)
messenger/transport/: CMakeLists.txt  transport.c  transport.h
nodus/: .gitignore  BUGS.md  CLAUDE.md  CMakeLists.txt  README.md
nodus/deploy/: build-nodus-v5.sh  build-nodus.sh  nodus-v5.conf.example  nodus-v5.service  nodus.conf.example  nodus.service
nodus/docs/: ARCHITECTURE.md  BOOTSTRAP.md  CIRCUIT_PROTOCOL.md  COMPREHENSIVE_AUDIT.md  DEPLOY_RUNBOOK.md  INTER_NODE_AUTH_TODO.md  MEMPOOL_BLOCK_TIME.md  NODUS_SECURITY_AUDIT.md  PLAN_VERSION_ENFORCEMENT.md  REPLICATION_DESIGN.md  REPLICATION_ISSUES.md
nodus/src/: nodus_log_shim.c
nodus/tests/: bench_diff.py  bench_run.sh  circuit_latency_probe.c  soak_test.sh  (+148 more)
(+1600 files in other folders)
